# flighthook

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  build.rs
app/src/: bus.rs  main.rs
app/src/actors/: mod.rs  r10.rs  system.rs
app/src/actors/gspro/: api.rs  mapper.rs  mod.rs  proto.rs
app/src/actors/mevo/: accumulator.rs  client.rs  mod.rs  settings.rs
app/src/actors/mock/: launch.rs  mod.rs  randomclub.rs
app/src/actors/web/: mod.rs  routes.rs  types.rs  ws.rs
app/src/state/: config.rs  game.rs  mod.rs
docs/: API.md  ARCHITECTURE.md
lib/: Cargo.toml  README.md
lib/src/: api.rs  client.rs  config.rs  event.rs  game_state.rs  lib.rs  message.rs
ui/: Cargo.toml  index.html
ui/src/: app.rs  lib.rs  net.rs  types.rs
ui/src/panels/: log.rs  mod.rs  monitoring.rs  settings.rs  shots.rs
