[package]
name = "flighthook-app"
version = "0.0.1"
edition = "2024"
description = "Golf simulator central event bus - bridges launch monitors and simulation software"
license = "MIT OR Apache-2.0"
keywords = ["golf", "launch-monitor"]
categories = ["command-line-utilities", "hardware-support"]
repository = "https://github.com/divotmaker/flighthook"

[[bin]]
name = "flighthook"
path = "src/main.rs"

[features]
default = ["gui"]
headless = []
gui = ["dep:flighthook-ui", "dep:eframe", "dep:egui", "dep:image"]

[dependencies]
ironsight = { version = "0.0.3", features = ["serde"] }
flighthook = { path = "../lib", features = ["clap"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
futures-util = "0.3"
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }

# Native GUI — optional, included by default `gui` feature.
# Excluded in headless builds via --no-default-features.
flighthook-ui = { path = "../ui", optional = true }
egui = { version = "0.33", optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }

# eframe backend is platform-specific: x11+wayland on Linux, Win32 on Windows.
[target.'cfg(not(target_os = "windows"))'.dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"], optional = true }

[build-dependencies]
winresource = "0.1"
