[package]
name = "flighthook"
version = "0.0.1"
edition = "2024"
description = "flighthook event bus types and schemas"
license = "MIT OR Apache-2.0"
keywords = ["golf", "launch-monitor"]
categories = ["data-structures"]
repository = "https://github.com/divotmaker/flighthook"

[features]
clap = ["dep:clap"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"], optional = true }
