[package]
name = "flighthook"
version = "0.1.1"
edition = "2024"
rust-version = "1.94"
description = "flighthook event bus types and schemas"
license = "MIT OR Apache-2.0"
keywords = ["golf", "launch-monitor"]
categories = ["data-structures"]
repository = "https://github.com/divotmaker/flighthook"

[features]
clap = ["dep:clap"]
client = ["dep:tungstenite"]

[dependencies]
flightrelay = "0.1.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"], optional = true }
tungstenite = { version = "0.26", optional = true }
